feat: activate direct custom domains
